force-app/main/default/objects/Host_Status_Code__mdt/Host_Status_Code__mdt.object-meta.xml
<CustomObject>
    <label>Host Status Code</label>
    <pluralLabel>Host Status Codes</pluralLabel>
</CustomObject>