force-app/main/default/objects/Host_Status_Code__mdt/fields/Host_System__c.field-meta.xml
<CustomField>
    <fullName>Host_System__c</fullName>
    <label>Host System</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
                <default>true</default>
                <label>General</label>
            </value>
            <value>
                <fullName>HCM</fullName>
            </value>
            <value>
                <fullName>SLOS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>