force-app/main/default/objects/Host_Status_Code__mdt/fields/Status_Message_TH__c.field-meta.xml
<CustomField>
    <fullName>Status_Message_TH__c</fullName>
    <label>Status Message (Th)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>